# tree-sitter-openmetrics

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-openmetrics.pc.in
bindings/c/tree_sitter/: tree-sitter-openmetrics.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_openmetrics/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOpenMetricsTests/: TreeSitterOpenMetricsTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
